update testimonial page

--- a/service.html
+++ b/service.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title> Emergency Medical Service  Online Practice </title>
     <link rel="stylesheet" type="text/css"  href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Lato" rel="stylesheet" >
     <script src="javascript/script.js"></script>
   </head>
   <body>
@@ -13,8 +14,8 @@
             <a href="service.html">Service</a>
             <a href="testimonials.html">Testimonials</a>
             <a href="questions.html">Questions</a>
+            <a href="#" class="login">Log In</a>
         </nav>
-        <button id="logIn" type="button">Log In</button>
     </header>
     <section>
         <h1> EMSPrep Service prepares you to be ready on EMT & Paramedic
