--- a/testimonials.html
+++ b/testimonials.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title> Emergency Medical Service  Online Practice - Testimonial </title>
     <link rel="stylesheet" type="text/css"  href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Lato" rel="stylesheet" >
     <script src="javascript/script.js"></script>
   </head>
   <body>
@@ -13,135 +14,121 @@
             <a href="service.html">Service</a>
             <a href="testimonials.html">Testimonials</a>
             <a href="questions.html">Questions</a>
+            <a href="#" class="login">Log In</a>
         </nav>
-        <button id="logIn" type="button">Log In</button>
     </header>
-    <section>
+    <section class="head2">
+        <h1>
+            “Life’s not about waiting for the storms to pass... it’s
+            about learning to dance in the rain.” — B.J.Gallagher
+        </h1>
+        <button class="training">Paramedic Package Training</button>
+    </section>
+    <section class="testimonials">
         <div>
-            <h1> Hear, Learn and Motivate by their stories </h1>
             <blockquote>
-                “Life’s not about waiting for the storms to pass... it’s
-                about learning to dance in the rain.” — B.J.Gallagher
+                <p> Hey guys....EXTREMELY WELL DONE!! You
+                have really put together the best compilation of
+                high quality EMT and Paramedic practice
+                exam questions I have ever seen and at a time when
+                there is so much crap out there!! EMSprep.com is
+                the perfect resource centre for both EMT and
+                Paramedics…thanks again! </p>
+                <cite>
+                    <span class="author"> -Joshua P, </span>
+                    Virginia
+                </cite>
             </blockquote>
         </div>
         <div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> Hey guys....EXTREMELY WELL DONE!! You
-                        have really put together the best compilation of
-                        high quality EMT and Paramedic practice
-                        exam questions I have ever seen and at a time when
-                        there is so much crap out there!! EMSprep.com is
-                        the perfect resource centre for both EMT and
-                        Paramedics…thanks again! </p>
-                        <cite>
-                            <span class="author"> -Joshua P, </span>
-                            Virginia
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> I’ve never been a good exam taker. Even if I
-                        know the answer, I second guess myself and ask if
-                        it’s a “trick question”. After practicing with the
-                        EMSPrep exams, I had so much more confidence going
-                        into my EMS Exam </p>
-                        <cite>
-                            <span class="author"> -Mark B, </span>
-                            Ohio
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> I am still stunned by my results. At last, a
-                        prep exam package that was not stale! You have an
-                        amazing system here. I'm expecting my pass marks to
-                        roll in any day now!! And all I did was make one
-                        simple purcahse. I had no idea it would make such a
-                        difference... but it did ! Studying your exam
-                        questions took me just minutes a day and it
-                        saved me hours... no I think it saved me DAYS of
-                        study time. I remembered more and understood more
-                        than ever before. Thanks very much! </p>
-                        <cite>
-                            <span class="author"> -Jeffrey D, </span>
-                            California
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> WoW! Having only ever tried studying with
-                        some used EMS Study Guides I bought on the internet,
-                        and seeing both myself and also friend's of mine try
-                        and painfully fail, I was very sceptical of
-                        EMSprep.com...but within just weeks of starting, my
-                        confidence sky rocketed after only studying a
-                        handful of the question categories you
-                        teach. </p>
-                        <p> Personally after being burned from purchasing
-                        many re-hashed EMS study products, I was 99%
-                        convinced that the internet was just a vehicle for
-                        "scams" - how wrong I was! Your study
-                        questions were of out of the world and are worth
-                        their weight in gold. </p>
-                        <cite>
-                            <span class="author"> -Sarah H, </span>
-                            Texas
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> The content of the EMSprep.com was extremely
-                        mazing. The information was very helpful and will be
-                        easily applicable to my final exam. It will be
-                        helpful for learning new concepts, studying for
-                        tests, and writing papers. You presented the
-                        concepts in an inciting and not at all intimidating
-                        or ridiculous manner. I am very excited to write my
-                        big exam. Thanks for the wonderful information! </p>
-                        <cite>
-                            <span class="author"> -Betty Proctor, </span>
-                            Utah
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <blockquote>
-                        <p> The best there is for the Paramedic or EMT
-                        exam. Thank you for developing an exam
-                        preparation tool that works. I am a
-                        Paramedic Instructor and have recommended
-                        your exam packages to all my students. I
-                        have tried them all and this is undoubtedly the best
-                        on the market. Not only do your
-                        questions simulate the feel of the actual test,
-                        but you've somehow managed to provide questions that
-                        are extremely similar to the real the exam. Not
-                        sure how you managed to do it but great job! I
-                        will recommend your website to all my students in
-                        the future. </p>
-                        <cite>
-                            <span class="author"> -Dianne B, </span>
-                            New York
-                        </cite>
-                    </blockquote>
-                </div>
-            </div>
+            <blockquote>
+                <p> I’ve never been a good exam taker. Even if I
+                know the answer, I second guess myself and ask if
+                it’s a “trick question”. After practicing with the
+                EMSPrep exams, I had so much more confidence going
+                into my EMS Exam </p>
+                <cite>
+                    <span class="author"> -Mark B, </span>
+                    Ohio
+                </cite>
+            </blockquote>
+        </div>
+        <div>
+            <blockquote>
+                <p> I am still stunned by my results. At last, a
+                prep exam package that was not stale! You have an
+                amazing system here. I'm expecting my pass marks to
+                roll in any day now!! And all I did was make one
+                simple purcahse. I had no idea it would make such a
+                difference... but it did ! Studying your exam
+                questions took me just minutes a day and it
+                saved me hours... no I think it saved me DAYS of
+                study time. I remembered more and understood more
+                than ever before. Thanks very much! </p>
+                <cite>
+                    <span class="author"> -Jeffrey D, </span>
+                    California
+                </cite>
+            </blockquote>
+        </div>
+        <div>
+            <blockquote>
+                <p> WoW! Having only ever tried studying with
+                some used EMS Study Guides I bought on the internet,
+                and seeing both myself and also friend's of mine try
+                and painfully fail, I was very sceptical of
+                EMSprep.com...but within just weeks of starting, my
+                confidence sky rocketed after only studying a
+                handful of the question categories you
+                teach. </p>
+                <p> Personally after being burned from purchasing
+                many re-hashed EMS study products, I was 99%
+                convinced that the internet was just a vehicle for
+                "scams" - how wrong I was! Your study
+                questions were of out of the world and are worth
+                their weight in gold. </p>
+                <cite>
+                    <span class="author"> -Sarah H, </span>
+                    Texas
+                </cite>
+            </blockquote>
+        </div>
+        <div>
+            <blockquote>
+                <p> The content of the EMSprep.com was extremely
+                mazing. The information was very helpful and will be
+                easily applicable to my final exam. It will be
+                helpful for learning new concepts, studying for
+                tests, and writing papers. You presented the
+                concepts in an inciting and not at all intimidating
+                or ridiculous manner. I am very excited to write my
+                big exam. Thanks for the wonderful information! </p>
+                <cite>
+                    <span class="author"> -Betty Proctor, </span>
+                    Utah
+                </cite>
+            </blockquote>
+        </div>
+        <div>
+            <blockquote>
+                <p> The best there is for the Paramedic or EMT
+                exam. Thank you for developing an exam
+                preparation tool that works. I am a
+                Paramedic Instructor and have recommended
+                your exam packages to all my students. I
+                have tried them all and this is undoubtedly the best
+                on the market. Not only do your
+                questions simulate the feel of the actual test,
+                but you've somehow managed to provide questions that
+                are extremely similar to the real the exam. Not
+                sure how you managed to do it but great job! I
+                will recommend your website to all my students in
+                the future. </p>
+                <cite>
+                    <span class="author"> -Dianne B, </span>
+                    New York
+                </cite>
+            </blockquote>
         </div>
     </section>
     <footer class="copyright">
