Update all files

--- a/service.html
+++ b/service.html
@@ -17,15 +17,18 @@
             <a href="#" class="login">Log In</a>
         </nav>
     </header>
-    <section>
+    <section class="head2">
         <h1> EMSPrep Service prepares you to be ready on EMT & Paramedic
             Exam </h1>
+        <button class="training">Paramedic Package Training</button>
+    </section>
+    <section class="promotion">
         <h2> Our service and special promotion below is for you: </h2>
         <div>
             <div>
                 <div>
                     <h3> Purchase any of our exam package before
-                    September 1, 2008 and receive a <span> BONUS
+                    September 1, 2008 and receive a <span class="bonus"> BONUS
                     ADDITIONAL </span> 1500 questions for a total
                     of  3000 unique questions </h3>
                     <p> <span> GIVE YOURSELF AN ADVANTAGE! HERE'S OUR
@@ -117,7 +120,7 @@
                     mind that with a paid package you'll receive 3000
                     unique, ONLINE, high calibre questions. </p>
                 </div>
-                <button> Practice Questions </button>
+                <button class="package"> Practice Questions </button>
             </div>
         </div>
     </section>
