Update questions file

--- a/questions.html
+++ b/questions.html
@@ -13,8 +13,8 @@
             <a href="service.html">Service</a>
             <a href="testimonials.html">Testimonials</a>
             <a href="questions.html">Questions</a>
+            <a href="#" class="login">Log In</a>
         </nav>
-        <button id="logIn" type="button">Log In</button>
     </header>
     <section class="questions">
             <h1> Sample Questions for you thrive in this exam </h1>
